// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sourceNodes creates nodes 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "id": "createNodeId",
        "internal": Object {
          "contentDigest": "createContentDigest",
          "type": "PrismicPageBodyText",
        },
        "items": Array [
          Object {},
        ],
        "primary": Object {
          "text": Object {
            "html": "<p>Example text</p>",
            "raw": Array [
              Object {
                "spans": Array [],
                "text": "Example text",
                "type": "paragraph",
              },
            ],
            "text": "Example text",
          },
        },
        "slice_label": undefined,
        "slice_type": "text",
      },
    ],
    Array [
      Object {
        "id": "createNodeId",
        "internal": Object {
          "contentDigest": "createContentDigest",
          "type": "PrismicPageBodyImages",
        },
        "items": Array [
          Object {
            "caption": Object {
              "html": "<p>Example camption</p>",
              "raw": Array [
                Object {
                  "spans": Array [],
                  "text": "Example camption",
                  "type": "paragraph",
                },
              ],
              "text": "Example camption",
            },
            "image": Object {
              "alt": "Example alt text",
              "copyright": null,
              "dimensions": Object {
                "height": 1333,
                "width": 2000,
              },
              "thumbnails": Object {
                "Mobile": Object {
                  "dimensions": Object {
                    "height": 667,
                    "width": 1000,
                  },
                  "url": "https://images.prismic.io/gatsby-starter-ww%2F975fc7f0-6d9c-4034-a7de-0b46379ee05b_sean-pollock-203658-unsplash.jpg?auto=compress,format&rect=0,0,6000,3999&w=1000&h=667",
                },
              },
              "url": "https://images.prismic.io/gatsby-starter-ww%2F975fc7f0-6d9c-4034-a7de-0b46379ee05b_sean-pollock-203658-unsplash.jpg?auto=compress,format&rect=0,0,6000,3999&w=2000&h=1333",
            },
          },
        ],
        "primary": Object {},
        "slice_label": undefined,
        "slice_type": "images",
      },
    ],
    Array [
      Object {
        "_previewable": "XDF-DhEAACAA5b4F",
        "alternate_languages": Array [],
        "data": Object {
          "body": Array [
            "createNodeId",
            "createNodeId",
          ],
          "main": Array [],
          "meta_description": null,
          "meta_title": null,
          "parent": Object {
            "document": "createNodeId",
            "link_type": "Document",
            "raw": Object {
              "link_type": "Document",
            },
            "url": "",
          },
          "title": Object {
            "html": "<h1>Home</h1>",
            "raw": Array [
              Object {
                "spans": Array [],
                "text": "Home",
                "type": "heading1",
              },
            ],
            "text": "Home",
          },
        },
        "dataRaw": Object {
          "body": Array [
            Object {
              "items": Array [
                Object {},
              ],
              "primary": Object {
                "text": Array [
                  Object {
                    "spans": Array [],
                    "text": "Example text",
                    "type": "paragraph",
                  },
                ],
              },
              "slice_label": null,
              "slice_type": "text",
            },
            Object {
              "items": Array [
                Object {
                  "caption": Array [
                    Object {
                      "spans": Array [],
                      "text": "Example camption",
                      "type": "paragraph",
                    },
                  ],
                  "image": Object {
                    "Mobile": Object {
                      "dimensions": Object {
                        "height": 667,
                        "width": 1000,
                      },
                      "url": "https://images.prismic.io/gatsby-starter-ww%2F975fc7f0-6d9c-4034-a7de-0b46379ee05b_sean-pollock-203658-unsplash.jpg?auto=compress,format&rect=0,0,6000,3999&w=1000&h=667",
                    },
                    "alt": "Example alt text",
                    "copyright": null,
                    "dimensions": Object {
                      "height": 1333,
                      "width": 2000,
                    },
                    "url": "https://images.prismic.io/gatsby-starter-ww%2F975fc7f0-6d9c-4034-a7de-0b46379ee05b_sean-pollock-203658-unsplash.jpg?auto=compress,format&rect=0,0,6000,3999&w=2000&h=1333",
                  },
                },
              ],
              "primary": Object {},
              "slice_label": null,
              "slice_type": "images",
            },
          ],
          "main": Array [],
          "meta_description": null,
          "meta_title": null,
          "parent": Object {
            "link_type": "Document",
          },
          "title": Array [
            Object {
              "spans": Array [],
              "text": "Home",
              "type": "heading1",
            },
          ],
        },
        "dataString": "{\\"title\\":[{\\"type\\":\\"heading1\\",\\"text\\":\\"Home\\",\\"spans\\":[]}],\\"meta_title\\":null,\\"meta_description\\":null,\\"parent\\":{\\"link_type\\":\\"Document\\"},\\"main\\":[],\\"body\\":[{\\"slice_type\\":\\"text\\",\\"slice_label\\":null,\\"items\\":[{}],\\"primary\\":{\\"text\\":[{\\"type\\":\\"paragraph\\",\\"text\\":\\"Example text\\",\\"spans\\":[]}]}},{\\"slice_type\\":\\"images\\",\\"slice_label\\":null,\\"items\\":[{\\"image\\":{\\"dimensions\\":{\\"width\\":2000,\\"height\\":1333},\\"alt\\":\\"Example alt text\\",\\"copyright\\":null,\\"url\\":\\"https://images.prismic.io/gatsby-starter-ww%2F975fc7f0-6d9c-4034-a7de-0b46379ee05b_sean-pollock-203658-unsplash.jpg?auto=compress,format&rect=0,0,6000,3999&w=2000&h=1333\\",\\"Mobile\\":{\\"url\\":\\"https://images.prismic.io/gatsby-starter-ww%2F975fc7f0-6d9c-4034-a7de-0b46379ee05b_sean-pollock-203658-unsplash.jpg?auto=compress,format&rect=0,0,6000,3999&w=1000&h=667\\",\\"dimensions\\":{\\"width\\":1000,\\"height\\":667}}},\\"caption\\":[{\\"type\\":\\"paragraph\\",\\"text\\":\\"Example camption\\",\\"spans\\":[]}]}],\\"primary\\":{}}]}",
        "first_publication_date": "2019-01-06T04:03:51+0000",
        "href": "https://gatsby-starter-ww.cdn.prismic.io/api/v2/documents/search?ref=Xj9DrRUAACcAJ33X&q=%5B%5B%3Ad+%3D+at%28document.id%2C+%22XDF-DhEAACAA5b4F%22%29+%5D%5D",
        "id": "createNodeId",
        "internal": Object {
          "contentDigest": "createContentDigest",
          "type": "PrismicPage",
        },
        "lang": "en-us",
        "last_publication_date": "2020-02-08T23:26:37+0000",
        "linked_documents": Array [],
        "prismicId": "XDF-DhEAACAA5b4F",
        "slugs": Array [
          "home",
        ],
        "tags": Array [],
        "type": "page",
        "uid": "home",
        "url": undefined,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`sourceNodes creates types 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "config": Object {
            "fields": Object {
              "published_on": Object {
                "extensions": Object {
                  "dateformat": Object {},
                },
                "type": "Date",
              },
            },
            "name": "PrismicPageMainNewsPostPrimaryType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "extensions": Object {
              "infer": false,
            },
            "fields": Object {
              "primary": "PrismicPageMainNewsPostPrimaryType",
              "slice_label": "String",
              "slice_type": "String!",
            },
            "interfaces": Array [
              "PrismicSliceInterface",
              "Node",
            ],
            "name": "PrismicPageMainNewsPost",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "name": "PrismicPageMainSlicesType",
            "types": Array [
              "PrismicPageMainNewsPost",
            ],
          },
          "kind": "UNION",
        },
        Object {
          "config": Object {
            "fields": Object {
              "text": "PrismicStructuredTextType",
            },
            "name": "PrismicPageBodyTextPrimaryType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "extensions": Object {
              "infer": false,
            },
            "fields": Object {
              "primary": "PrismicPageBodyTextPrimaryType",
              "slice_label": "String",
              "slice_type": "String!",
            },
            "interfaces": Array [
              "PrismicSliceInterface",
              "Node",
            ],
            "name": "PrismicPageBodyText",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "fields": Object {
              "caption": "PrismicStructuredTextType",
              "image": "PrismicImageType",
              "orientation": "Boolean",
            },
            "name": "PrismicPageBodyImagesItemType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "extensions": Object {
              "infer": false,
            },
            "fields": Object {
              "items": "[PrismicPageBodyImagesItemType]",
              "slice_label": "String",
              "slice_type": "String!",
            },
            "interfaces": Array [
              "PrismicSliceInterface",
              "Node",
            ],
            "name": "PrismicPageBodyImages",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "name": "PrismicPageBodySlicesType",
            "types": Array [
              "PrismicPageBodyText",
              "PrismicPageBodyImages",
            ],
          },
          "kind": "UNION",
        },
        Object {
          "config": Object {
            "extensions": Object {
              "infer": false,
            },
            "fields": Object {
              "body": Object {
                "resolve": [Function],
                "type": "[PrismicPageBodySlicesType]",
              },
              "main": Object {
                "resolve": [Function],
                "type": "[PrismicPageMainSlicesType]",
              },
              "meta_description": "String",
              "meta_title": "String",
              "parent": "PrismicLinkType",
              "title": "PrismicStructuredTextType",
            },
            "name": "PrismicPageDataType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "extensions": Object {
              "infer": false,
            },
            "fields": Object {
              "_previewable": Object {
                "description": "Marks the document as previewable using Prismic's preview system. Include this field if updates to the document should be previewable by content editors before publishing. **Note: the value of this field is not stable and should not be used directly**.",
                "type": "ID!",
              },
              "alternate_languages": Object {
                "description": "Alternate languages for the document.",
                "type": "[PrismicLinkType!]!",
              },
              "data": Object {
                "description": "The document's fields and their content.",
                "type": "PrismicPageDataType",
              },
              "dataRaw": Object {
                "description": "The document's data object without transformations exactly as it comes from the Prismic API.",
                "type": "JSON!",
              },
              "dataString": Object {
                "deprecationReason": "Use \`dataRaw\` instead which returns JSON.",
                "description": "The document's data object without transformations. The object is stringified via \`JSON.stringify\` to eliminate the need to declare subfields.",
                "type": "String!",
              },
              "first_publication_date": Object {
                "description": "The document's initial publication date.",
                "extensions": Object {
                  "dateformat": Object {},
                },
                "type": "Date!",
              },
              "href": Object {
                "description": "The document's Prismic API URL.",
                "type": "String!",
              },
              "id": Object {
                "description": "Globally unique identifier. Note that this differs from the \`prismicID\` field.",
                "type": "ID!",
              },
              "lang": Object {
                "description": "The document's language.",
                "type": "String!",
              },
              "last_publication_date": Object {
                "description": "The document's most recent publication date",
                "extensions": Object {
                  "dateformat": Object {},
                },
                "type": "Date!",
              },
              "prismicId": Object {
                "description": "The document's Prismic ID.",
                "type": "ID!",
              },
              "tags": Object {
                "description": "The document's list of tags.",
                "type": "[String!]!",
              },
              "type": Object {
                "description": "The document's Prismic API ID type.",
                "type": "String!",
              },
              "uid": "String",
              "url": Object {
                "description": "The document's URL derived via the link resolver.",
                "type": "String",
              },
            },
            "interfaces": Array [
              "PrismicDocument",
              "Node",
            ],
            "name": "PrismicPage",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "name": "PrismicAllDocumentTypes",
            "types": Array [
              "PrismicPage",
            ],
          },
          "kind": "UNION",
        },
        Object {
          "config": Object {
            "fields": Object {
              "Mobile": "PrismicImageThumbnailType",
            },
            "name": "PrismicImageThumbnailsType",
          },
          "kind": "OBJECT",
        },
      ],
    ],
    Array [
      Array [
        "PrismicImageFixedType",
        "PrismicImageFluidType",
      ],
    ],
    Array [
      Array [
        Object {
          "config": Object {
            "description": "An image field with optional constrained thumbnails.",
            "fields": Object {
              "alt": "String",
              "copyright": "String",
              "dimensions": "PrismicImageDimensionsType",
              "fixed": Object {
                "args": Object {
                  "height": Object {
                    "type": "Int",
                  },
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "placeholderImgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "width": Object {
                    "defaultValue": 400,
                    "type": "Int",
                  },
                },
                "resolve": [Function],
                "type": "PrismicImageFixedType",
              },
              "fluid": Object {
                "args": Object {
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "maxHeight": Object {
                    "type": "Int",
                  },
                  "maxWidth": Object {
                    "defaultValue": 800,
                    "type": "Int",
                  },
                  "placeholderImgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "srcSetBreakpoints": Object {
                    "type": "[Int]",
                  },
                },
                "resolve": [Function],
                "type": "PrismicImageFluidType",
              },
              "localFile": Object {
                "extensions": Object {
                  "link": Object {},
                },
                "type": "File",
              },
              "thumbnails": "PrismicImageThumbnailsType",
              "url": Object {
                "args": Object {
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                },
                "resolve": [Function],
                "type": "String",
              },
            },
            "name": "PrismicImageType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "An image thumbnail with constraints.",
            "fields": Object {
              "alt": "String",
              "copyright": "String",
              "dimensions": "PrismicImageDimensionsType",
              "fixed": Object {
                "args": Object {
                  "height": Object {
                    "type": "Int",
                  },
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "placeholderImgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "width": Object {
                    "defaultValue": 400,
                    "type": "Int",
                  },
                },
                "resolve": [Function],
                "type": "PrismicImageFixedType",
              },
              "fluid": Object {
                "args": Object {
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "maxHeight": Object {
                    "type": "Int",
                  },
                  "maxWidth": Object {
                    "defaultValue": 800,
                    "type": "Int",
                  },
                  "placeholderImgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "srcSetBreakpoints": Object {
                    "type": "[Int]",
                  },
                },
                "resolve": [Function],
                "type": "PrismicImageFluidType",
              },
              "localFile": Object {
                "extensions": Object {
                  "link": Object {},
                },
                "type": "File",
              },
              "url": Object {
                "args": Object {
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                },
                "resolve": [Function],
                "type": "String",
              },
            },
            "name": "PrismicImageThumbnailType",
          },
          "kind": "OBJECT",
        },
      ],
    ],
    Array [
      Array [
        Object {
          "config": Object {
            "description": "A text field with formatting options.",
            "fields": Object {
              "html": Object {
                "description": "The HTML value of the text using \`prismic-dom\` and the HTML serializer.",
                "type": "String",
              },
              "raw": Object {
                "description": "The field's value without transformations exactly as it comes from the Prismic API.",
                "type": "JSON",
              },
              "text": Object {
                "description": "The plain text value of the text using \`prismic-dom\`.",
                "type": "String",
              },
            },
            "name": "PrismicStructuredTextType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "A field for storing geo-coordinates.",
            "fields": Object {
              "latitude": Object {
                "description": "The latitude value of the geo-coordinate.",
                "type": "Float",
              },
              "longitude": Object {
                "description": "The latitude value of the geo-coordinate.",
                "type": "Float",
              },
            },
            "name": "PrismicGeoPointType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "Embed videos, songs, tweets, slices, etc.",
            "fields": Object {
              "author_id": Object {
                "description": "The ID of the resource author. Fetched via oEmbed data.",
                "type": "ID",
              },
              "author_name": Object {
                "description": "The name of the author/owner of the resource. Fetched via oEmbed data.",
                "type": "String",
              },
              "author_url": Object {
                "description": "A URL for the author/owner of the resource. Fetched via oEmbed data.",
                "type": "String",
              },
              "cache_age": Object {
                "description": "The suggested cache lifetime for this resource, in seconds. Consumers may choose to use this value or not. Fetched via oEmbed data.",
                "type": "String",
              },
              "embed_url": Object {
                "description": "The URL of the resource.",
                "type": "String",
              },
              "height": Object {
                "description": "The height in pixel of the resource. Fetched via oEmbed data.",
                "type": "Int",
              },
              "html": Object {
                "description": "The HTML required to display the resource. The HTML should have no padding or margins. Consumers may wish to load the HTML in an off-domain iframe to avoid XSS vulnerabilities. Fetched via oEmbed data.",
                "type": "String",
              },
              "media_id": Object {
                "description": "The ID of the resource media. Fetched via oEmbed data.",
                "type": "ID",
              },
              "name": Object {
                "description": "The name of the resource.",
                "type": "String",
              },
              "provider_name": Object {
                "description": "The name of the resource provider. Fetched via oEmbed data.",
                "type": "String",
              },
              "provider_url": Object {
                "description": "The URL of the resource provider. Fetched via oEmbed data.",
                "type": "String",
              },
              "thumbnail_height": Object {
                "description": "The width of the resource's thumbnail. Fetched via oEmbed data.",
                "type": "Int",
              },
              "thumbnail_url": Object {
                "description": "A URL to a thumbnail image representing the resource. Fetched via oEmbed data.",
                "type": "String",
              },
              "thumbnail_width": Object {
                "description": "The width of the resource's thumbnail. Fetched via oEmbed data.",
                "type": "Int",
              },
              "title": Object {
                "description": "A text title, describing the resource. Fetched via oEmbed data.",
                "type": "String",
              },
              "type": Object {
                "description": "The resource type. Fetched via oEmbed data.",
                "type": "String",
              },
              "url": Object {
                "description": "The source URL of the resource. Fetched via oEmbed data.",
                "type": "String",
              },
              "version": Object {
                "description": "The oEmbed version number.",
                "type": "String",
              },
              "width": Object {
                "description": "The width in pixel of the resource. Fetched via oEmbed data.",
                "type": "Int",
              },
            },
            "name": "PrismicEmbedType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "Dimensions for images.",
            "fields": Object {
              "height": Object {
                "description": "Height of the image in pixels.",
                "type": "Int",
              },
              "width": Object {
                "description": "Width of the image in pixels.",
                "type": "Int",
              },
            },
            "name": "PrismicImageDimensionsType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "An image thumbnail with constraints.",
            "fields": Object {
              "alt": Object {
                "description": "",
                "type": "String",
              },
              "copyright": Object {
                "description": "",
                "type": "String",
              },
              "dimensions": Object {
                "description": "",
                "type": "PrismicImageDimensionsType",
              },
              "localFile": Object {
                "description": "",
                "extensions": Object {
                  "link": Object {},
                },
                "type": "File",
              },
              "url": Object {
                "description": "",
                "type": "String",
              },
            },
            "name": "PrismicImageThumbnailType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "Types of links.",
            "name": "PrismicLinkTypes",
            "values": Object {
              "Any": Object {},
              "Document": Object {},
              "Media": Object {},
              "Web": Object {},
            },
          },
          "kind": "ENUM",
        },
        Object {
          "config": Object {
            "description": "Link to web, media, and internal content.",
            "fields": Object {
              "document": Object {
                "description": "If a Document link, the linked document.",
                "extensions": Object {
                  "link": Object {},
                },
                "type": "PrismicAllDocumentTypes",
              },
              "id": Object {
                "description": "If a Document link, the linked document's Prismic ID.",
                "type": "ID",
              },
              "isBroken": Object {
                "description": "If a Document link, \`true\` if linked document does not exist, \`false\` otherwise.",
                "type": "Boolean",
              },
              "lang": Object {
                "description": "If a Document link, the linked document's language.",
                "type": "String",
              },
              "link_type": Object {
                "description": "The type of link.",
                "type": "PrismicLinkTypes!",
              },
              "raw": Object {
                "description": "The field's value without transformations exactly as it comes from the Prismic API.",
                "type": "JSON",
              },
              "size": Object {
                "description": "If a Media link, the size of the file.",
                "type": "Int",
              },
              "slug": Object {
                "description": "If a Document link, the linked document's slug.",
                "type": "String",
              },
              "tags": Object {
                "description": "If a Document link, the linked document's list of tags.",
                "type": "String",
              },
              "target": Object {
                "description": "The link's target.",
                "type": "String",
              },
              "type": Object {
                "description": "If a Document link, the linked document's Prismic custom type API ID",
                "type": "String",
              },
              "uid": Object {
                "description": "If a Document link, the linked document's UID.",
                "type": "String",
              },
              "url": Object {
                "description": "The document's URL derived via the link resolver.",
                "type": "String",
              },
            },
            "name": "PrismicLinkType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "fields": Object {
              "slice_label": Object {
                "description": "The slice label.",
                "type": "String",
              },
              "slice_type": Object {
                "description": "The slice type API ID.",
                "type": "String!",
              },
            },
            "name": "PrismicSliceInterface",
          },
          "kind": "INTERFACE",
        },
        Object {
          "config": Object {
            "fields": Object {
              "_previewable": Object {
                "description": "Marks the document as previewable using Prismic's preview system. Include this field if updates to the document should be previewable by content editors before publishing. **Note: the value of this field is not stable and should not be used directly**.",
                "type": "ID!",
              },
              "alternate_languages": Object {
                "description": "Alternate languages for the document.",
                "type": "[PrismicLinkType!]!",
              },
              "dataRaw": Object {
                "description": "The document's data object without transformations exactly as it comes from the Prismic API.",
                "type": "JSON!",
              },
              "dataString": Object {
                "deprecationReason": "Use \`dataRaw\` instead which returns JSON.",
                "description": "The document's data object without transformations. The object is stringified via \`JSON.stringify\` to eliminate the need to declare subfields.",
                "type": "String!",
              },
              "first_publication_date": Object {
                "description": "The document's initial publication date.",
                "extensions": Object {
                  "dateformat": Object {},
                },
                "type": "Date!",
              },
              "href": Object {
                "description": "The document's Prismic API URL.",
                "type": "String!",
              },
              "id": Object {
                "description": "Globally unique identifier. Note that this differs from the \`prismicID\` field.",
                "type": "ID!",
              },
              "lang": Object {
                "description": "The document's language.",
                "type": "String!",
              },
              "last_publication_date": Object {
                "description": "The document's most recent publication date",
                "extensions": Object {
                  "dateformat": Object {},
                },
                "type": "Date!",
              },
              "prismicId": Object {
                "description": "The document's Prismic ID.",
                "type": "ID!",
              },
              "tags": Object {
                "description": "The document's list of tags.",
                "type": "[String!]!",
              },
              "type": Object {
                "description": "The document's Prismic API ID type.",
                "type": "String!",
              },
              "url": Object {
                "description": "The document's URL derived via the link resolver.",
                "type": "String",
              },
            },
            "name": "PrismicDocument",
          },
          "kind": "INTERFACE",
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`sourceNodes creates types with prefix, if provided 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "config": Object {
            "fields": Object {
              "published_on": Object {
                "extensions": Object {
                  "dateformat": Object {},
                },
                "type": "Date",
              },
            },
            "name": "PrismicPrefixPageMainNewsPostPrimaryType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "extensions": Object {
              "infer": false,
            },
            "fields": Object {
              "primary": "PrismicPrefixPageMainNewsPostPrimaryType",
              "slice_label": "String",
              "slice_type": "String!",
            },
            "interfaces": Array [
              "PrismicSliceInterface",
              "Node",
            ],
            "name": "PrismicPrefixPageMainNewsPost",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "name": "PrismicPrefixPageMainSlicesType",
            "types": Array [
              "PrismicPrefixPageMainNewsPost",
            ],
          },
          "kind": "UNION",
        },
        Object {
          "config": Object {
            "fields": Object {
              "text": "PrismicStructuredTextType",
            },
            "name": "PrismicPrefixPageBodyTextPrimaryType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "extensions": Object {
              "infer": false,
            },
            "fields": Object {
              "primary": "PrismicPrefixPageBodyTextPrimaryType",
              "slice_label": "String",
              "slice_type": "String!",
            },
            "interfaces": Array [
              "PrismicSliceInterface",
              "Node",
            ],
            "name": "PrismicPrefixPageBodyText",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "fields": Object {
              "caption": "PrismicStructuredTextType",
              "image": "PrismicPrefixImageType",
              "orientation": "Boolean",
            },
            "name": "PrismicPrefixPageBodyImagesItemType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "extensions": Object {
              "infer": false,
            },
            "fields": Object {
              "items": "[PrismicPrefixPageBodyImagesItemType]",
              "slice_label": "String",
              "slice_type": "String!",
            },
            "interfaces": Array [
              "PrismicSliceInterface",
              "Node",
            ],
            "name": "PrismicPrefixPageBodyImages",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "name": "PrismicPrefixPageBodySlicesType",
            "types": Array [
              "PrismicPrefixPageBodyText",
              "PrismicPrefixPageBodyImages",
            ],
          },
          "kind": "UNION",
        },
        Object {
          "config": Object {
            "extensions": Object {
              "infer": false,
            },
            "fields": Object {
              "body": Object {
                "resolve": [Function],
                "type": "[PrismicPrefixPageBodySlicesType]",
              },
              "main": Object {
                "resolve": [Function],
                "type": "[PrismicPrefixPageMainSlicesType]",
              },
              "meta_description": "String",
              "meta_title": "String",
              "parent": "PrismicLinkType",
              "title": "PrismicStructuredTextType",
            },
            "name": "PrismicPrefixPageDataType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "extensions": Object {
              "infer": false,
            },
            "fields": Object {
              "_previewable": Object {
                "description": "Marks the document as previewable using Prismic's preview system. Include this field if updates to the document should be previewable by content editors before publishing. **Note: the value of this field is not stable and should not be used directly**.",
                "type": "ID!",
              },
              "alternate_languages": Object {
                "description": "Alternate languages for the document.",
                "type": "[PrismicLinkType!]!",
              },
              "data": Object {
                "description": "The document's fields and their content.",
                "type": "PrismicPrefixPageDataType",
              },
              "dataRaw": Object {
                "description": "The document's data object without transformations exactly as it comes from the Prismic API.",
                "type": "JSON!",
              },
              "dataString": Object {
                "deprecationReason": "Use \`dataRaw\` instead which returns JSON.",
                "description": "The document's data object without transformations. The object is stringified via \`JSON.stringify\` to eliminate the need to declare subfields.",
                "type": "String!",
              },
              "first_publication_date": Object {
                "description": "The document's initial publication date.",
                "extensions": Object {
                  "dateformat": Object {},
                },
                "type": "Date!",
              },
              "href": Object {
                "description": "The document's Prismic API URL.",
                "type": "String!",
              },
              "id": Object {
                "description": "Globally unique identifier. Note that this differs from the \`prismicID\` field.",
                "type": "ID!",
              },
              "lang": Object {
                "description": "The document's language.",
                "type": "String!",
              },
              "last_publication_date": Object {
                "description": "The document's most recent publication date",
                "extensions": Object {
                  "dateformat": Object {},
                },
                "type": "Date!",
              },
              "prismicId": Object {
                "description": "The document's Prismic ID.",
                "type": "ID!",
              },
              "tags": Object {
                "description": "The document's list of tags.",
                "type": "[String!]!",
              },
              "type": Object {
                "description": "The document's Prismic API ID type.",
                "type": "String!",
              },
              "uid": "String",
              "url": Object {
                "description": "The document's URL derived via the link resolver.",
                "type": "String",
              },
            },
            "interfaces": Array [
              "PrismicDocument",
              "Node",
            ],
            "name": "PrismicPrefixPage",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "name": "PrismicAllDocumentTypes",
            "types": Array [
              "PrismicPrefixPage",
            ],
          },
          "kind": "UNION",
        },
        Object {
          "config": Object {
            "fields": Object {
              "Mobile": "PrismicPrefixImageThumbnailType",
            },
            "name": "PrismicPrefixImageThumbnailsType",
          },
          "kind": "OBJECT",
        },
      ],
    ],
    Array [
      Array [
        "PrismicPrefixImageFixedType",
        "PrismicPrefixImageFluidType",
      ],
    ],
    Array [
      Array [
        Object {
          "config": Object {
            "description": "An image field with optional constrained thumbnails.",
            "fields": Object {
              "alt": "String",
              "copyright": "String",
              "dimensions": "PrismicImageDimensionsType",
              "fixed": Object {
                "args": Object {
                  "height": Object {
                    "type": "Int",
                  },
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "placeholderImgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "width": Object {
                    "defaultValue": 400,
                    "type": "Int",
                  },
                },
                "resolve": [Function],
                "type": "PrismicPrefixImageFixedType",
              },
              "fluid": Object {
                "args": Object {
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "maxHeight": Object {
                    "type": "Int",
                  },
                  "maxWidth": Object {
                    "defaultValue": 800,
                    "type": "Int",
                  },
                  "placeholderImgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "srcSetBreakpoints": Object {
                    "type": "[Int]",
                  },
                },
                "resolve": [Function],
                "type": "PrismicPrefixImageFluidType",
              },
              "localFile": Object {
                "extensions": Object {
                  "link": Object {},
                },
                "type": "File",
              },
              "thumbnails": "PrismicPrefixImageThumbnailsType",
              "url": Object {
                "args": Object {
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                },
                "resolve": [Function],
                "type": "String",
              },
            },
            "name": "PrismicPrefixImageType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "An image thumbnail with constraints.",
            "fields": Object {
              "alt": "String",
              "copyright": "String",
              "dimensions": "PrismicImageDimensionsType",
              "fixed": Object {
                "args": Object {
                  "height": Object {
                    "type": "Int",
                  },
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "placeholderImgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "width": Object {
                    "defaultValue": 400,
                    "type": "Int",
                  },
                },
                "resolve": [Function],
                "type": "PrismicPrefixImageFixedType",
              },
              "fluid": Object {
                "args": Object {
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "maxHeight": Object {
                    "type": "Int",
                  },
                  "maxWidth": Object {
                    "defaultValue": 800,
                    "type": "Int",
                  },
                  "placeholderImgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                  "srcSetBreakpoints": Object {
                    "type": "[Int]",
                  },
                },
                "resolve": [Function],
                "type": "PrismicPrefixImageFluidType",
              },
              "localFile": Object {
                "extensions": Object {
                  "link": Object {},
                },
                "type": "File",
              },
              "url": Object {
                "args": Object {
                  "imgixParams": Object {
                    "defaultValue": Object {},
                    "type": "ImgixUrlParamsInput",
                  },
                },
                "resolve": [Function],
                "type": "String",
              },
            },
            "name": "PrismicPrefixImageThumbnailType",
          },
          "kind": "OBJECT",
        },
      ],
    ],
    Array [
      Array [
        Object {
          "config": Object {
            "description": "A text field with formatting options.",
            "fields": Object {
              "html": Object {
                "description": "The HTML value of the text using \`prismic-dom\` and the HTML serializer.",
                "type": "String",
              },
              "raw": Object {
                "description": "The field's value without transformations exactly as it comes from the Prismic API.",
                "type": "JSON",
              },
              "text": Object {
                "description": "The plain text value of the text using \`prismic-dom\`.",
                "type": "String",
              },
            },
            "name": "PrismicStructuredTextType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "A field for storing geo-coordinates.",
            "fields": Object {
              "latitude": Object {
                "description": "The latitude value of the geo-coordinate.",
                "type": "Float",
              },
              "longitude": Object {
                "description": "The latitude value of the geo-coordinate.",
                "type": "Float",
              },
            },
            "name": "PrismicGeoPointType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "Embed videos, songs, tweets, slices, etc.",
            "fields": Object {
              "author_id": Object {
                "description": "The ID of the resource author. Fetched via oEmbed data.",
                "type": "ID",
              },
              "author_name": Object {
                "description": "The name of the author/owner of the resource. Fetched via oEmbed data.",
                "type": "String",
              },
              "author_url": Object {
                "description": "A URL for the author/owner of the resource. Fetched via oEmbed data.",
                "type": "String",
              },
              "cache_age": Object {
                "description": "The suggested cache lifetime for this resource, in seconds. Consumers may choose to use this value or not. Fetched via oEmbed data.",
                "type": "String",
              },
              "embed_url": Object {
                "description": "The URL of the resource.",
                "type": "String",
              },
              "height": Object {
                "description": "The height in pixel of the resource. Fetched via oEmbed data.",
                "type": "Int",
              },
              "html": Object {
                "description": "The HTML required to display the resource. The HTML should have no padding or margins. Consumers may wish to load the HTML in an off-domain iframe to avoid XSS vulnerabilities. Fetched via oEmbed data.",
                "type": "String",
              },
              "media_id": Object {
                "description": "The ID of the resource media. Fetched via oEmbed data.",
                "type": "ID",
              },
              "name": Object {
                "description": "The name of the resource.",
                "type": "String",
              },
              "provider_name": Object {
                "description": "The name of the resource provider. Fetched via oEmbed data.",
                "type": "String",
              },
              "provider_url": Object {
                "description": "The URL of the resource provider. Fetched via oEmbed data.",
                "type": "String",
              },
              "thumbnail_height": Object {
                "description": "The width of the resource's thumbnail. Fetched via oEmbed data.",
                "type": "Int",
              },
              "thumbnail_url": Object {
                "description": "A URL to a thumbnail image representing the resource. Fetched via oEmbed data.",
                "type": "String",
              },
              "thumbnail_width": Object {
                "description": "The width of the resource's thumbnail. Fetched via oEmbed data.",
                "type": "Int",
              },
              "title": Object {
                "description": "A text title, describing the resource. Fetched via oEmbed data.",
                "type": "String",
              },
              "type": Object {
                "description": "The resource type. Fetched via oEmbed data.",
                "type": "String",
              },
              "url": Object {
                "description": "The source URL of the resource. Fetched via oEmbed data.",
                "type": "String",
              },
              "version": Object {
                "description": "The oEmbed version number.",
                "type": "String",
              },
              "width": Object {
                "description": "The width in pixel of the resource. Fetched via oEmbed data.",
                "type": "Int",
              },
            },
            "name": "PrismicEmbedType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "Dimensions for images.",
            "fields": Object {
              "height": Object {
                "description": "Height of the image in pixels.",
                "type": "Int",
              },
              "width": Object {
                "description": "Width of the image in pixels.",
                "type": "Int",
              },
            },
            "name": "PrismicImageDimensionsType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "An image thumbnail with constraints.",
            "fields": Object {
              "alt": Object {
                "description": "",
                "type": "String",
              },
              "copyright": Object {
                "description": "",
                "type": "String",
              },
              "dimensions": Object {
                "description": "",
                "type": "PrismicImageDimensionsType",
              },
              "localFile": Object {
                "description": "",
                "extensions": Object {
                  "link": Object {},
                },
                "type": "File",
              },
              "url": Object {
                "description": "",
                "type": "String",
              },
            },
            "name": "PrismicImageThumbnailType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "description": "Types of links.",
            "name": "PrismicLinkTypes",
            "values": Object {
              "Any": Object {},
              "Document": Object {},
              "Media": Object {},
              "Web": Object {},
            },
          },
          "kind": "ENUM",
        },
        Object {
          "config": Object {
            "description": "Link to web, media, and internal content.",
            "fields": Object {
              "document": Object {
                "description": "If a Document link, the linked document.",
                "extensions": Object {
                  "link": Object {},
                },
                "type": "PrismicAllDocumentTypes",
              },
              "id": Object {
                "description": "If a Document link, the linked document's Prismic ID.",
                "type": "ID",
              },
              "isBroken": Object {
                "description": "If a Document link, \`true\` if linked document does not exist, \`false\` otherwise.",
                "type": "Boolean",
              },
              "lang": Object {
                "description": "If a Document link, the linked document's language.",
                "type": "String",
              },
              "link_type": Object {
                "description": "The type of link.",
                "type": "PrismicLinkTypes!",
              },
              "raw": Object {
                "description": "The field's value without transformations exactly as it comes from the Prismic API.",
                "type": "JSON",
              },
              "size": Object {
                "description": "If a Media link, the size of the file.",
                "type": "Int",
              },
              "slug": Object {
                "description": "If a Document link, the linked document's slug.",
                "type": "String",
              },
              "tags": Object {
                "description": "If a Document link, the linked document's list of tags.",
                "type": "String",
              },
              "target": Object {
                "description": "The link's target.",
                "type": "String",
              },
              "type": Object {
                "description": "If a Document link, the linked document's Prismic custom type API ID",
                "type": "String",
              },
              "uid": Object {
                "description": "If a Document link, the linked document's UID.",
                "type": "String",
              },
              "url": Object {
                "description": "The document's URL derived via the link resolver.",
                "type": "String",
              },
            },
            "name": "PrismicLinkType",
          },
          "kind": "OBJECT",
        },
        Object {
          "config": Object {
            "fields": Object {
              "slice_label": Object {
                "description": "The slice label.",
                "type": "String",
              },
              "slice_type": Object {
                "description": "The slice type API ID.",
                "type": "String!",
              },
            },
            "name": "PrismicSliceInterface",
          },
          "kind": "INTERFACE",
        },
        Object {
          "config": Object {
            "fields": Object {
              "_previewable": Object {
                "description": "Marks the document as previewable using Prismic's preview system. Include this field if updates to the document should be previewable by content editors before publishing. **Note: the value of this field is not stable and should not be used directly**.",
                "type": "ID!",
              },
              "alternate_languages": Object {
                "description": "Alternate languages for the document.",
                "type": "[PrismicLinkType!]!",
              },
              "dataRaw": Object {
                "description": "The document's data object without transformations exactly as it comes from the Prismic API.",
                "type": "JSON!",
              },
              "dataString": Object {
                "deprecationReason": "Use \`dataRaw\` instead which returns JSON.",
                "description": "The document's data object without transformations. The object is stringified via \`JSON.stringify\` to eliminate the need to declare subfields.",
                "type": "String!",
              },
              "first_publication_date": Object {
                "description": "The document's initial publication date.",
                "extensions": Object {
                  "dateformat": Object {},
                },
                "type": "Date!",
              },
              "href": Object {
                "description": "The document's Prismic API URL.",
                "type": "String!",
              },
              "id": Object {
                "description": "Globally unique identifier. Note that this differs from the \`prismicID\` field.",
                "type": "ID!",
              },
              "lang": Object {
                "description": "The document's language.",
                "type": "String!",
              },
              "last_publication_date": Object {
                "description": "The document's most recent publication date",
                "extensions": Object {
                  "dateformat": Object {},
                },
                "type": "Date!",
              },
              "prismicId": Object {
                "description": "The document's Prismic ID.",
                "type": "ID!",
              },
              "tags": Object {
                "description": "The document's list of tags.",
                "type": "[String!]!",
              },
              "type": Object {
                "description": "The document's Prismic API ID type.",
                "type": "String!",
              },
              "url": Object {
                "description": "The document's URL derived via the link resolver.",
                "type": "String",
              },
            },
            "name": "PrismicDocument",
          },
          "kind": "INTERFACE",
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`sourceNodes writes type paths to filesystem 2`] = `
Array [
  Object {
    "path": Array [
      "page",
      "uid",
    ],
    "type": "String",
  },
  Object {
    "path": Array [
      "page",
      "alternate_languages",
    ],
    "type": "AlternateLanguages",
  },
  Object {
    "path": Array [
      "page",
      "data",
    ],
    "type": "PrismicPageDataType",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "title",
    ],
    "type": "PrismicStructuredTextType",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "meta_title",
    ],
    "type": "String",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "meta_description",
    ],
    "type": "String",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "parent",
    ],
    "type": "PrismicLinkType",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "main",
      "news_post",
      "primary",
      "published_on",
    ],
    "type": "Date",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "main",
      "news_post",
      "primary",
    ],
    "type": "PrismicPageMainNewsPostPrimaryType",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "main",
      "news_post",
    ],
    "type": "PrismicPageMainNewsPost",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "main",
    ],
    "type": "[PrismicPageMainSlicesType]",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "body",
      "text",
      "primary",
      "text",
    ],
    "type": "PrismicStructuredTextType",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "body",
      "text",
      "primary",
    ],
    "type": "PrismicPageBodyTextPrimaryType",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "body",
      "text",
    ],
    "type": "PrismicPageBodyText",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "body",
      "images",
      "items",
      "image",
    ],
    "type": "PrismicImageType",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "body",
      "images",
      "items",
      "image",
      "thumbnails",
      "Mobile",
    ],
    "type": "PrismicImageThumbnailType",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "body",
      "images",
      "items",
      "caption",
    ],
    "type": "PrismicStructuredTextType",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "body",
      "images",
      "items",
      "orientation",
    ],
    "type": "Boolean",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "body",
      "images",
      "items",
    ],
    "type": "[PrismicPageBodyImagesItemType]",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "body",
      "images",
    ],
    "type": "PrismicPageBodyImages",
  },
  Object {
    "path": Array [
      "page",
      "data",
      "body",
    ],
    "type": "[PrismicPageBodySlicesType]",
  },
  Object {
    "path": Array [
      "page",
    ],
    "type": "PrismicPage",
  },
]
`;
